[package]
name = "rps"
version = "0.1.0"
authors = ["Ken <kenakioreed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egaku2d = "0.5"
broccoli={git="https://github.com/tiby312/broccoli"}
axgeom="*"
duckduckgeo ={git="https://github.com/tiby312/duckduckgeo"}
rayon-core="*"
num_cpus="*"
seq_impulse={path="../seq_impulse"}